--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,8 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
      # - aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 800667604467.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=800667604467.dkr.ecr.us-east-1.amazonaws.com/node
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 941866212823.dkr.ecr.us-east-1.amazonaws.com
+      - REPOSITORY_URI=941866212823.dkr.ecr.us-east-1.amazonaws.com/node2
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       #- IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
       - IMAGE_TAG=latest
@@ -16,7 +16,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker login -u sri5606 -p $password
+      #- docker login -u sri5606 -p $password
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
@@ -24,8 +24,8 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - echo Writing image definitions file...
-      - printf '[{"name":"node-container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
-      - cat imagedefinitions.json 
+      #- echo Writing image definitions file...
+      #- printf '[{"name":"node-container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      #- cat imagedefinitions.json 
 artifacts:
     files: imagedefinitions.json
